--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         </div>
 
     </section>
+    <section class="categoria">
+        <h2>relacionados...</h2>
+        <div class="categoria-videos">
+            <a href="">
+                <img src="">
+            </a>
+        </div>
+    </section>
 
 </body>
 </html>
