--- a/index.html
+++ b/index.html
@@ -23,8 +23,20 @@
     <section class="categoria">
         <h2>relacionados...</h2>
         <div class="categoria-videos">
-            <a href="">
-                <img src="">
+            <a href="https://www.youtube.com/watch?v=KLH3RGVFCFI">
+                <img src="https://img.youtube.com/vi/KLH3RGVFCFI/maxresdefault.jpg">
+            </a>
+            <a href="https://www.youtube.com/watch?v=GupojkVirMw">
+                <img src="https://img.youtube.com/vi/GupojkVirMw/maxresdefault.jpg">
+            </a>
+            <a href="https://www.youtube.com/watch?v=wMi-4XOS5n8">
+                <img src="https://img.youtube.com/vi/wMi-4XOS5n8/maxresdefault.jpg">
+            </a>
+            <a href="https://www.youtube.com/watch?v=57ui6bmetZE">
+                <img src="https://img.youtube.com/vi/57ui6bmetZE/maxresdefault.jpg">
+            </a>
+            <a href="https://www.youtube.com/watch?v=OradLnB4D0E">
+                <img src="https://img.youtube.com/vi/OradLnB4D0E/maxresdefault.jpg">
             </a>
         </div>
     </section>
